--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.14",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "mysql2": "^2.1.0",
+    "node": "^14.5.0",
     "pug": "^3.0.0",
     "sequelize": "^6.2.3"
   },
