--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "mongodb": "^3.5.9",
     "mysql2": "^2.1.0",
     "node": "^14.5.0",
     "pug": "^3.0.0",
