--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.21",
     "mysql2": "^2.1.0",
     "node": "^14.5.0",
     "pug": "^3.0.0",
