--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.14",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.3",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
