--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.1",
     "@types/node": "^14.0.14",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -24,8 +25,11 @@
     "mongoose": "^5.9.21",
     "mysql2": "^2.1.0",
     "node": "^14.5.0",
+    "nodemailer": "^6.4.10",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.0",
-    "sequelize": "^6.2.3"
+    "sequelize": "^6.2.3",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
